2007-05-31 [wwp]	2.9.2cvs23

	* src/plugins/bogofilter/Makefile.am
	* src/plugins/clamav/Makefile.am
	* src/plugins/demo/Makefile.am
	* src/plugins/dillo_viewer/Makefile.am
	* src/plugins/spamassassin/Makefile.am
		Fix building of those plugins in Mac OS X.

2007-05-30 [wwp]	2.9.2cvs22

	* src/gtk/quicksearch.c
		Fix missing initialization.

2007-05-30 [wwp]	2.9.2cvs21

	* src/procheader.c
		Revert accidental commit (debug outputs).

2007-05-30 [wwp]	2.9.2cvs20

	* src/compose.c
	* src/folder_item_prefs.c
	* src/folder_item_prefs.h
	* src/prefs_account.c
	* src/prefs_account.h
	* src/prefs_folder_item.c
	* src/prefs_gtk.c
	* src/prefs_gtk.h
		Implemented per-account and per-folder
		compose/reply/forward formats.

2007-05-30 [wwp]	2.9.2cvs19

	* src/prefs_compose_writing.c
	* src/prefs_quote.c
	* src/procheader.c
	* src/quote_fmt.c
	* src/quote_fmt.h
		Internal API changes (factorize quote format
		prefs and checks).

2007-05-30 [colin]	2.9.2cvs18

	* src/compose.c
		Fix race where it's possible to re-click Send
		between end of SMTP session and end of "move to
		sent folder" when sending an email with send
		dialog enabled.

2007-05-30 [colin]	2.9.2cvs17

	* src/crash.c
		Ask for backtrace on all threads. Patch by
		Pawel
	* src/folderview.c
		Fix stale news statusbar when scanning fails.
		Patch by Pawel
	* src/ldapupdate.c
		Fix some LDAP write updates bugs. Patch
		by Michael Rasmussen

2007-05-29 [colin]	2.9.2cvs16

	* src/imap.c
		Fix loss of local flags when moving mails
		on IMAP in high-bandwidth mode (UID FETCH)

2007-05-25 [paul]	2.9.2cvs15

	* src/common/socket.c
		fix sometimes crasher on cancelling
		message sending

2007-05-25 [colin]	2.9.2cvs14

	* src/imap.c
		Fix a memory leak
	* src/imap_gtk.c
		Be more helpful in the subscription
		message

2007-05-23 [wwp]	2.9.2cvs13

	* src/compose.c
	* src/prefs_compose_writing.c
	* src/prefs_quote.c
	* src/prefs_template.c
	* src/prefs_template.h
	* src/quote_fmt.c
	* src/quote_fmt.h
	* src/quote_fmt_lex.l