@@ -2599,3 +2599,4 @@
 ( cvs diff -u -r 1.47.2.41 -r 1.47.2.42 src/procheader.c;  ) > 2.9.2cvs21.patchset
 ( cvs diff -u -r 1.1.2.71 -r 1.1.2.72 src/gtk/quicksearch.c;  ) > 2.9.2cvs22.patchset
 ( cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/plugins/bogofilter/Makefile.am;  cvs diff -u -r 1.4.2.7 -r 1.4.2.8 src/plugins/clamav/Makefile.am;  cvs diff -u -r 1.3.2.3 -r 1.3.2.4 src/plugins/demo/Makefile.am;  cvs diff -u -r 1.4.2.5 -r 1.4.2.6 src/plugins/dillo_viewer/Makefile.am;  cvs diff -u -r 1.5.2.6 -r 1.5.2.7 src/plugins/spamassassin/Makefile.am;  ) > 2.9.2cvs23.patchset
+( cvs diff -u -r 1.60.2.88 -r 1.60.2.89 src/addressbook.c;  ) > 2.9.2cvs24.patchset
